Добавил br в промо блок

--- a/src/blocks/promo/promo.html
+++ b/src/blocks/promo/promo.html
@@ -5,9 +5,9 @@
     <a href="" class="promo__button button">Получить клиентов <span class="button__arrow"></span></a>
   </div>
   <ul class="promo__list">
-    <li class="promo__item"><p><b>Бесплатный </b> аудит текущих кампаний</p></li>
+    <li class="promo__item"><p><b>Бесплатный </b> аудит<br> текущих кампаний</p></li>
     <li class="promo__item"><p>Полная настройка <br><b>«под ключ»</b> без тарифов</p></li>
-    <li class="promo__item"><p>Ведение и <b>аналитика</b> кампаний</p></li>
-    <li class="promo__item"><p>Привожу клиентов в бизнес с <b>2013 г.</b></p></li>
+    <li class="promo__item"><p>Ведение и <b>аналитика</b><br> кампаний</p></li>
+    <li class="promo__item"><p>Привожу клиентов<br> в бизнес с <b>2013 г.</b></p></li>
   </ul>
 </section>
