--- a/index.html
+++ b/index.html
@@ -9,7 +9,37 @@
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
+  <header class="header">
+    <a href="#" class="header__logo logo">
+      <img src="img/logo.png" alt="logo">
+    </a>
+    <nav class="header__menu menu">
+      <button class="menu__btn">
+        <span class="menu__hamburger">Открыть меню</span>
+      </button>
+      <ul class="menu__list">
+        <li class="menu__item"><a href="#about">Обо мне</a></li>
+        <li class="menu__item"><a href="#">Кейсы</a></li>
+        <li class="menu__item"><a href="#">Стоимость</a></li>
+        <li class="menu__item"><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+    <a href="tel:+79198767802 " class="header__phone"><span>+7 (919)</span> 876-78-02 </a>
+  </header>
   <main>
+    <section class="promo">
+      <div class="promo__content">
+        <h1 class="promo__title title title--promo"><span>Настройка Контекстной Рекламы</span></h1>
+        <p class="promo__desc">В Яндекс.Директ и Google ADS</p>
+        <a href="" class="promo__button button">Получить клиентов <span class="button__arrow"></span></a>
+      </div>
+      <ul class="promo__list">
+        <li class="promo__item"><p><b>Бесплатный </b> аудит<br> текущих кампаний</p></li>
+        <li class="promo__item"><p>Полная настройка <br><b>«под ключ»</b> без тарифов</p></li>
+        <li class="promo__item"><p>Ведение и <b>аналитика</b><br> кампаний</p></li>
+        <li class="promo__item"><p>Привожу клиентов<br> в бизнес с <b>2013 г.</b></p></li>
+      </ul>
+    </section>
   </main>
   <script src="js/libs.js"></script>
   <script src="js/general.js"></script>
