--- a/index.html
+++ b/index.html
@@ -77,6 +77,235 @@
         </div>
       </div>
     </section>
+    <section class="about">
+      <h2 class="about__title title title--section"><span>Обо мне</span></h2>
+      <div class="about__inner">
+        <img src="img/about__img--desktop.png" alt="" class="about__img about__img--desktop">
+        <div class="about__content">
+          <p class="about__rotate rotate rotate--yellow">Информация</p>
+          <p class="about__name">Дмитрий<br> Мильченков</p>
+          <p class="about__position">специалист по контекстной рекламе</p>
+          <img src="img/about__img--mobile.png" alt="" class="about__img about__img--mobile">
+          <ul class="about__list">
+            <li class="about__item"><p><b>Более 7 лет</b> в сфере контекстной рекламы</p></li>
+            <li class="about__item"><p>Сотрудничаю с представительствами <b>крупных компаний</b> (Skoda, Renault, DIMEX, ПЭК и др.)</p></li>
+            <li class="about__item"><p><b>Без</b> тарифов и ограничений по кол-ву ключей\объявлений </p></li>
+            <li class="about__item"><p>Работаю <b>официально по договору,</b> принимаю оплату на расчетный счет, готовлю документы для бухгалтерии</p></li>
+          </ul>
+          <div class="about__advantage"><p>Мой <b>главный</b> приоритет — качество и результативность</p></div>
+          <div class="about__quote">
+            <p>Я разговариваю с Вами <b>на одном языке</b> — объясняю понятно и доступно. <b>Каждую</b> кампанию довожу до результата с помощью ведения и веб-аналитики, а также концентрируюсь <b>на показателях прибыли.</b></p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="case">
+      <div class="case__wrapper">
+        <div class="case__top">
+          <h2 class="case__title title title--section"><span>Кейсы</span></h2>
+          <p class="case__rotate rotate">Выполненные настройки</p>
+        </div>
+        <ul class="case__list">
+          <li class="case__item">
+            <div class="case__inner">
+              <div class="case__content">
+                <ul class="case__sub-list">
+                  <li class="case__sub-item">
+                    <img src="img/case__item--01.png" alt="">
+                    <b>Клиент:</b>
+                    <span>Автосалон Renault Стандарт</span>
+                  </li>
+                  <li class="case__sub-item">
+                    <img src="img/case__item--02.png" alt="">
+                    <b>Сайт:</b>
+                    <span>renault-standart.ru</span>
+                  </li>
+                  <li class="case__sub-item">
+                    <img src="img/case__item--03.png" alt="">
+                    <b>Задача:</b>
+                    <span>Уменьшить стоимость привлечения клиента, проработать Яндекс.Директ</span>
+                  </li>
+                </ul>
+                <div class="case__prices">
+                  <p class="case__prices-title">Цена заявки</p>
+                  <div class="case__prices-inner">
+                    <div class="case__left">
+                      <span>Была:</span>
+                      <p>7 000 <span>р.</span></p>
+                    </div>
+                    <div class="case__right">
+                      <span>Стала:</span>
+                      <p>600 <span>р.</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <img class="case__img" src="img/case__img.png" alt="">
+            </div>
+          </li>
+          <li class="case__item">
+            <div class="case__inner">
+              <div class="case__content">
+                <ul class="case__sub-list">
+                  <li class="case__sub-item">
+                    <img src="img/case__item--01.png" alt="">
+                    <b>Клиент:</b>
+                    <span>Автосалон Renault Стандарт</span>
+                  </li>
+                  <li class="case__sub-item">
+                    <img src="img/case__item--02.png" alt="">
+                    <b>Сайт:</b>
+                    <span>renault-standart.ru</span>
+                  </li>
+                  <li class="case__sub-item">
+                    <img src="img/case__item--03.png" alt="">
+                    <b>Задача:</b>
+                    <span>Уменьшить стоимость привлечения клиента, проработать Яндекс.Директ</span>
+                  </li>
+                </ul>
+                <div class="case__prices">
+                  <p class="case__prices-title">Цена заявки</p>
+                  <div class="case__prices-inner">
+                    <div class="case__left">
+                      <span>Была:</span>
+                      <p>7 000 <span>р.</span></p>
+                    </div>
+                    <div class="case__right">
+                      <span>Стала:</span>
+                      <p>600 <span>р.</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <img class="case__img" src="img/case__img.png" alt="">
+            </div>
+          </li>
+        </ul>
+        <div class="case__control arrow">
+          <button class="arrow__button arrow__button--left case__arrow case__arrow--left">
+            <div class="arrow__circle"></div>
+            <span>предыдущий</span>
+          </button>
+          <div class="case__count count">
+            <span class="count__big">1</span>
+            <span class="count__separator"> / </span>
+            <span class="count__small">3</span>
+          </div>
+          <button class="arrow__button arrow__button--right case__arrow case__arrow--right">
+            <div class="arrow__circle"></div>
+            <span>следующий</span>
+          </button>
+        </div>
+        <a href="#" class="case__download">
+          <span>Смотреть все кейсы</span>
+        </a>
+      </div>
+    </section>
+    <section class="stages">
+      <div class="stages__top">
+        <h2 class="stages__title title title--section"><span>Этапы работы</span></h2>
+        <div class="stages__counter">
+          <p class="stages__header">ЭТАП</p>
+          <div class="stages__count count">
+            <span class="count__big">1</span>
+            <span class="count__separator"> из </span>
+            <span class="count__small">3</span>
+          </div>
+        </div>
+      </div>
+      <div class="stages__wrapper">
+        <p class="stages__rotate rotate rotate--yellow">Последовательность работ</p>
+        <div class="stages__content">
+          <ul class="stages__list">
+            <li class="stages__item">
+              <div class="stages__name">
+                <img src="img/stages__icon--01.png">
+                <p>Анализ ниши и погружение в ваш бизнес</p>
+              </div>
+              <ul class="stages__sub-list">
+                <li class="stages__sub-item"><p>Анализ вашей целевой аудитории и <b>спроса</b></p></li>
+                <li class="stages__sub-item"><p>Анализ <b>конкурентов</b></p></li>
+                <li class="stages__sub-item"><p>Анализ имеющейся статистики и <b>аудит рекламных кампаний</b></p></li>
+                <li class="stages__sub-item"><p>Разрабатываем <b>рекламную стратегию</b> исходя из региона, бюджета и ЦА</p></li>
+              </ul>
+            </li>
+            <li class="stages__item">
+              <div class="stages__name">
+                <img src="img/stages__icon--02.png">
+                <p>Анализ ниши и погружение в ваш бизнес</p>
+              </div>
+              <ul class="stages__sub-list">
+                <li class="stages__sub-item"><p>Анализ вашей целевой аудитории и <b>спроса</b></p></li>
+                <li class="stages__sub-item"><p>Анализ <b>конкурентов</b></p></li>
+                <li class="stages__sub-item"><p>Анализ имеющейся статистики и <b>аудит рекламных кампаний</b></p></li>
+                <li class="stages__sub-item"><p>Разрабатываем <b>рекламную стратегию</b> исходя из региона, бюджета и ЦА</p></li>
+              </ul>
+            </li>
+            <li class="stages__item">
+              <div class="stages__name">
+                <img src="img/stages__icon--03.png">
+                <p>Анализ ниши и погружение в ваш бизнес</p>
+              </div>
+              <ul class="stages__sub-list">
+                <li class="stages__sub-item"><p>Анализ вашей целевой аудитории и <b>спроса</b></p></li>
+                <li class="stages__sub-item"><p>Анализ <b>конкурентов</b></p></li>
+                <li class="stages__sub-item"><p>Анализ имеющейся статистики и <b>аудит рекламных кампаний</b></p></li>
+                <li class="stages__sub-item"><p>Разрабатываем <b>рекламную стратегию</b> исходя из региона, бюджета и ЦА</p></li>
+              </ul>
+            </li>
+            <li class="stages__item">
+              <div class="stages__name">
+                <img src="img/stages__icon--04.png">
+                <p>Анализ ниши и погружение в ваш бизнес</p>
+              </div>
+              <ul class="stages__sub-list">
+                <li class="stages__sub-item"><p>Анализ вашей целевой аудитории и <b>спроса</b></p></li>
+                <li class="stages__sub-item"><p>Анализ <b>конкурентов</b></p></li>
+                <li class="stages__sub-item"><p>Анализ имеющейся статистики и <b>аудит рекламных кампаний</b></p></li>
+                <li class="stages__sub-item"><p>Разрабатываем <b>рекламную стратегию</b> исходя из региона, бюджета и ЦА</p></li>
+              </ul>
+            </li>
+            <li class="stages__item">
+              <div class="stages__name">
+                <img src="img/stages__icon--05.png">
+                <p>Анализ ниши и погружение в ваш бизнес</p>
+              </div>
+              <ul class="stages__sub-list">
+                <li class="stages__sub-item"><p>Анализ вашей целевой аудитории и <b>спроса</b></p></li>
+                <li class="stages__sub-item"><p>Анализ <b>конкурентов</b></p></li>
+                <li class="stages__sub-item"><p>Анализ имеющейся статистики и <b>аудит рекламных кампаний</b></p></li>
+                <li class="stages__sub-item"><p>Разрабатываем <b>рекламную стратегию</b> исходя из региона, бюджета и ЦА</p></li>
+              </ul>
+            </li>
+          </ul>
+          <div class="stages__bg">
+            <div class="stages__control arrow arrow--yellow">
+              <button class="arrow__button arrow__button--left stages__arrow stages__arrow--left">
+                <div class="arrow__circle"></div>
+                <span>предыдущий</span>
+              </button>
+              <div class="service__count count">
+                <span class="count__big">1</span>
+                <span class="count__separator"> / </span>
+                <span class="count__small">3</span>
+              </div>
+              <button class="arrow__button arrow__button--right stages__arrow stages__arrow--right">
+                <div class="arrow__circle"></div>
+                <span>следующий</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contract">
+      <h2 class="contract__title title title--section"><span>Работаю<br> по договору</span></h2>
+      <p class="contract__desc">Я заинтересован в <b>качественном выполнении</b> своей работы. Чтобы и Вы были уверены в партнере, мы работаем по договору</p>
+      <img src="img/contract__bg--mobile.png" alt="" class="contract__img">
+      <ul class="contract__list">
+        <li class="contract__item"><p>В договоре прописана финальная цена, сроки сдачи проекта и <b>все основные моменты</b></p></li>
+      </ul>
+    </section>
   </main>
   <script src="js/libs.js"></script>
   <script src="js/general.js"></script>
