--- a/src/blocks/modal/modal.html
+++ b/src/blocks/modal/modal.html
@@ -1,18 +1,75 @@
 <div class="overlay"></div>
-<!--<div class="modal modal&#45;&#45;form">-->
-<!--  <button class="modal__close">Закрыть</button>-->
-<!--  <h2 class="modal__title title title&#45;&#45;section"><span>Заказать настройку</span></h2>-->
-<!--  <p class="modal__desc">Яндекс.Директ</p>-->
-<!--  <div class="modal__text"><p>Оставьте данные и <b>в течение 30 минут</b> я свяжусь с вами для обсуждения деталей настройки</p></div>-->
-<!--  <div class="modal__form form">-->
-<!--    <input type="text" class="modal__input input" placeholder="Имя">-->
-<!--    <input type="tel" class="modal__input input" placeholder="Телефон">-->
-<!--    <button class="modal__button button">-->
-<!--      Заказать настройку-->
-<!--      <span class="button__arrow"></span>-->
-<!--    </button>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="modal modal--form modal--yandex">
+  <button class="modal__close">Закрыть</button>
+  <h2 class="modal__title title title--section"><span>Заказать настройку</span></h2>
+  <p class="modal__desc">Яндекс.Директ</p>
+  <div class="modal__text"><p>Оставьте данные и <b>в течение 30 минут</b> я свяжусь с вами для обсуждения деталей настройки</p></div>
+  <form class="modal__form form">
+    <input type="hidden" name="project_name" value="DM">
+    <input type="hidden" name="admin_email" value="dmilchenkov@gmail.com">
+    <input type="hidden" name="form_subject" value="Заказ Яндекс.Директ | DM">
+    <input name="Имя" type="text" class="modal__input input" placeholder="Имя">
+    <input name="Телефон" type="tel" class="modal__input input" placeholder="Телефон" required>
+    <button class="modal__button button">
+      Заказать настройку
+      <span class="button__arrow"></span>
+    </button>
+  </form>
+</div>
+
+<div class="modal modal--form modal--google">
+  <button class="modal__close">Закрыть</button>
+  <h2 class="modal__title title title--section"><span>Заказать настройку</span></h2>
+  <p class="modal__desc">Google Ads</p>
+  <div class="modal__text"><p>Оставьте данные и <b>в течение 30 минут</b> я свяжусь с вами для обсуждения деталей настройки</p></div>
+  <form class="modal__form form">
+    <input type="hidden" name="project_name" value="DM">
+    <input type="hidden" name="admin_email" value="dmilchenkov@gmail.com">
+    <input type="hidden" name="form_subject" value="Заказ Google Ads | DM">
+    <input name="Имя" type="text" class="modal__input input" placeholder="Имя">
+    <input name="Телефон" type="tel" class="modal__input input" placeholder="Телефон" required>
+    <button class="modal__button button">
+      Заказать настройку
+      <span class="button__arrow"></span>
+    </button>
+  </form>
+</div>
+
+<div class="modal modal--form modal--all">
+  <button class="modal__close">Закрыть</button>
+  <h2 class="modal__title title title--section"><span>Заказать настройку</span></h2>
+  <p class="modal__desc">Яндекс.Директ + Google Ads</p>
+  <div class="modal__text"><p>Оставьте данные и <b>в течение 30 минут</b> я свяжусь с вами для обсуждения деталей настройки</p></div>
+  <form class="modal__form form">
+    <input type="hidden" name="project_name" value="DM">
+    <input type="hidden" name="admin_email" value="dmilchenkov@gmail.com">
+    <input type="hidden" name="form_subject" value="Заказ Яндекс.Директ + Google Ads | DM">
+    <input name="Имя" type="text" class="modal__input input" placeholder="Имя">
+    <input name="Телефон" type="tel" class="modal__input input" placeholder="Телефон" required>
+    <button class="modal__button button">
+      Заказать настройку
+      <span class="button__arrow"></span>
+    </button>
+  </form>
+</div>
+
+<div class="modal modal--form modal--clients">
+  <button class="modal__close">Закрыть</button>
+  <h2 class="modal__title title title--section"><span>Заказать настройку</span></h2>
+  <p class="modal__desc">Яндекс.Директ + Google Ads</p>
+  <div class="modal__text"><p>Оставьте данные и <b>в течение 30 минут</b> я свяжусь с вами для обсуждения деталей настройки</p></div>
+  <form class="modal__form form">
+    <input type="hidden" name="project_name" value="DM">
+    <input type="hidden" name="admin_email" value="dmilchenkov@gmail.com">
+    <input type="hidden" name="form_subject" value="Получить клиентов | DM">
+    <input name="Имя" type="text" class="modal__input input" placeholder="Имя">
+    <input name="Телефон" type="tel" class="modal__input input" placeholder="Телефон" required>
+    <button class="modal__button button">
+      Заказать настройку
+      <span class="button__arrow"></span>
+    </button>
+  </form>
+</div>
 
 <div class="modal modal--thx">
   <button class="modal__close">Закрыть</button>
