--- a/src/blocks/prices/prices.html
+++ b/src/blocks/prices/prices.html
@@ -18,7 +18,7 @@
         <li class="prices__sub-item"><p>Предоставление Вам <b>полного доступа</b> к рекламным кампаниям</p></li>
       </ul>
       <p class="prices__price">от <span>20 500 р.</span></p>
-      <a href="" class="prices__button">
+      <a href="javascript://" class="prices__button prices__button--yandex">
         <p>Заказать настройку</p>
         <span>Яндекс.Директ</span>
       </a>
@@ -37,7 +37,7 @@
         <li class="prices__sub-item"><p>Предоставление Вам <b>полного доступа</b> к рекламным кампаниям</p></li>
       </ul>
       <p class="prices__price">от <span>20 500 р.</span></p>
-      <a href="" class="prices__button">
+      <a href="javascript://" class="prices__button prices__button--google">
         <p>Заказать настройку</p>
         <span>Google Ads</span>
       </a>
@@ -59,7 +59,7 @@
         <li class="prices__sub-item"><p>Предоставление Вам <b>полного доступа</b> к рекламным кампаниям</p></li>
       </ul>
       <p class="prices__price">от <span>20 500 р.</span></p>
-      <a href="" class="prices__button">
+      <a href="javascript://" class="prices__button prices__button--all">
         <p>Заказать настройку</p>
         <span>Яндекс.Директ+Google Ads</span>
       </a>
