--- a/index.html
+++ b/index.html
@@ -725,14 +725,14 @@
     <section class="stages">
       <div class="stages__top">
         <h2 class="stages__title title title--section"><span>Этапы работы</span></h2>
-        <div class="stages__counter">
-          <p class="stages__header">ЭТАП</p>
-          <div class="stages__count count">
-            <span class="count__big">1</span>
-            <span class="count__separator"> из </span>
-            <span class="count__small">3</span>
-          </div>
-        </div>
+    <!--    <div class="stages__counter">-->
+    <!--      <p class="stages__header">ЭТАП</p>-->
+    <!--      <div class="stages__count count">-->
+    <!--        <span class="count__big">1</span>-->
+    <!--        <span class="count__separator"> из </span>-->
+    <!--        <span class="count__small">3</span>-->
+    <!--      </div>-->
+    <!--    </div>-->
       </div>
       <div class="stages__wrapper">
         <p class="stages__rotate rotate rotate--yellow">Последовательность работ</p>
